manifestos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: gitops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-nginx
  template:
    metadata:
      labels:
        app: web-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        # O volumeMounts fica DENTRO do container
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      # O volumes fica FORA do bloco containers, mas dentro do spec do pod
      volumes:
      - name: html-volume
        configMap: # M maiúsculo aqui
          name: nginx-index-html
