manifestos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: gitops-app
spec:
  selector:
    app: web-nginx
  ports:
  - port: 80
    targetPort: 80
